<resources>
    <string name="app_name">Aura</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="social_title">Aura Social Publisher</string>
    <string name="content_label">Image text:</string>
    <string name="lesdissia_name">Page name</string>
    <string name="page_label">Publishing page:</string>
    <string name="nd">N.D.</string>
    <string name="preview_button">Preview</string>
    <string name="post_button">Post</string>
    <string name="share_label">Share on my personal profile</string>
    <string name="social_page_comment_label">Page comment:</string>
    <string name="social_share_comment_label">Share comment:</string>
    <string name="dashboard_logo_description">logo</string>
    <string name="app_version">Ver. 0.2.0</string>
    <string name="undo_button">Undo</string>
    <string name="create_button">Create</string>
    <string name="no_task_watched">No task is currently being watched.</string>
    <string name="no_task_available">No task currently available.</string>
</resources>
